# travel-map

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Justfile  Makefile  README.md  TODO  a.sh  alloy-config.river  deploy.sh  docker-compose.yml  example.env  loki-config.yml  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  skills-lock.json  strava.py  tempo-config.yml
.github/workflows/: deploy.yml
app/: app.py  cookies.py  db.py  dependencies.py  jwt.py  limiter.py  password.py  redis.py  settings.py  utils.py  visited_edges.py
app/api/: __init__.py  common.py  geocode.py  gpx.py  main.py  middlewares.py  route_generation.py  strava_routes.py  user.py
app/domain/: locale.py  ports.py
app/extensions/: alloy.py  lifespan.py  prometheus.py
app/generator/: all_streets_random.py  astar.py  base.py  dfs.py  random_route.py
app/infrastructure/: uow.py
app/serializers/: geocode.py
app/services/: elevation.py  email.py  gpx.py  nominatim.py
app/use_case/: __init__.py  confirm_password_reset.py  login_user.py  refresh_user_token.py  register_user.py  request_password_reset.py  verify_user_email.py
app/web/: __init__.py  htmx.py  pages.py  templates.py
deployment/: Dockerfile  deploy.sh  docker-compose.yml  update_nginx.sh
deployment/nginx/: api.conf  default  grafana.conf  prometheus.conf
init_data/: 10419759559.gpx  10514727385.gpx  10536725045.gpx  5214843519.gpx  5407555276.gpx  5419913296.gpx  5427929444.gpx  5467701279.gpx  5591549543.gpx  8792269976.gpx
migrations/: env.py
migrations/versions/: 1339b3d8075f_add_password.py  345324390cba_make_email_primary_key.py  5aab456798d4_add_is_email_verified.py  6d7f0917ca7c_halo.py  aecf35e77b24_init_migrations.py  e2703a29f660_not_mark_email_as_primary.py  e7c8d2e1abb7_init_migrations.py
prometheus/: prometheus.yml
prometheus/dashboards/: logs.json  node_exporter.json
scripts/: README.md  check-mikrus.sh  display_edges.py  hover_edge.py  plot_cover.py  plot_memory.py  save_strava_routes.py  visualize_all_streets.py
static/css/: app.css
static/js/: app.js
templates/web/: base.html  debug.html  index.html
tests/: conftest.py  factories.py  test_settings.py
tests/api/: test_geocode.py  test_gpx.py  test_main.py  test_route_generation.py  test_user.py
tests/bcov/: base.py  test_astar_route.py  test_random_route.py
tests/memory/: base.py  (+1 more)
travel_map/: app.py  cookies.py  db.py  dependencies.py  jwt.py  limiter.py  middlewares.py  models.py  password.py  redis.py  settings.py  utils.py  visited_edges.py
(+75 files in other folders)
