[project]
name = "travel_map"
version = "0.0.1"
requires-python=">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "osmnx>=2.0.0b3",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.1",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.34.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["travel_map"]

[tool.setuptools.packages.find]
include = ["travel_map*"]
