[project]
name = "travel_map"
version = "0.0.1"
requires-python=">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "osmnx>=2.0.0b3",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.1",
    "uvicorn>=0.34.3",
    "scikit-learn>=1.7.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["travel_map"]

[tool.setuptools.packages.find]
include = ["travel_map*"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "debugpy>=1.8.14",
    "folium>=0.20.0",
    "html2image>=2.0.7",
    "imgkit>=1.2.3",
    "matplotlib>=3.10.3",
    "playwright>=1.54.0",
    "pyqt5>=5.15.11",
    "pytest-coverage>=0.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a9",
]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-s",
    "--cov=travel_map"
]
