[project]
name = "travel_map"
version = "0.0.1"
requires-python=">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "osmnx>=2.0.0b3",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.1",
    "uvicorn>=0.34.3",
    "scikit-learn>=1.7.0",
    "gpxpy>=1.6.2",
    "pytest-xdist>=3.8.0",
    "httpx>=0.28.1",
    "redis>=6.4.0",
    "fastapi-cache2>=0.2.2",
    "aiolimiter>=1.2.1",
    "psutil>=7.0.0",
    "sentry-sdk[fastapi]>=2.38.0",
    "sqlmodel>=0.0.25",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["travel_map"]

[tool.setuptools.packages.find]
include = ["travel_map*"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "debugpy>=1.8.14",
    "folium>=0.20.0",
    "html2image>=2.0.7",
    "imgkit>=1.2.3",
    "matplotlib>=3.10.3",
    "playwright>=1.55.0",
    "pyqt5>=5.15.11",
    "pytest-coverage>=0.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a9",
]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-s",
    "--cov=travel_map"
]

[tool.uv]
package = true
